--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <HTML>
-   <HEAD>
+   <HEAD> background-image: url("background.jpg");
       <TITLE>
          A Small Hello 
       </TITLE>
