--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <HTML>
-   <HEAD> background-image: url("background.jpg");
+   <HEAD> 
+      <style>
+body  {
+    background-image: url("background.jpg");
+    background-color: #cccccc;
+         }</style>
       <TITLE>
          A Small Hello 
       </TITLE>
