--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ body  {
     background-image: url("background.jpg");
     background-color: #cccccc;
          }</style>
-      <TITLE>
+      <TITLE style="color:white;">
          A Small Hello 
       </TITLE>
    </HEAD>
 <BODY>
-   <H1>Hi</H1>
-   <P>This is very minimal "hello world" HTML document.</P> 
+   <H1 style="color:white;">Hi</H1>
+   <P style="color:white;">This is very minimal "hello world" HTML document.</P> 
 </BODY>
 </HTML>
