--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@ body  {
 <BODY>
    <H1 style="color:white;">Hi</H1>
    <P style="color:white;">This is very minimal "hello world" HTML document.</P> 
+   
+   <span class="toggle">    <input type="checkbox">    <label data-off="&#10006;" data-on="&#10004;"></label></span>
+<span class="toggle">    <input type="checkbox">    <label data-off="&#9724;" data-on="&#9654;"></label></span>
 </BODY>
 </HTML>
