--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <HTML>
    <HEAD> 
-      <style>
-body  {
-    background-image: url("background.jpg");
-    background-color: #cccccc;
-         }</style>
+      <link rel="stylesheet" type="text/css" href="mystyle.css">
       <TITLE style="color:white;">
          A Small Hello 
       </TITLE>
