--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HTML>
    <HEAD> 
       <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <style>background-image: url("background.jpg");background-color: #cccccc;}</style> 
       <TITLE style="color:white;">
          A Small Hello 
       </TITLE>
