--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <HTML>
    <HEAD> 
-      <link rel="stylesheet" type="text/css" href="mystyle.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
         <style>background-image: url("background.jpg");background-color: #cccccc;}</style> 
       <TITLE style="color:white;">
          A Small Hello 
