--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
    
    <span class="toggle">    <input type="checkbox">    <label data-off="&#10006;" data-on="&#10004;"></label></span>
 <span class="toggle">    <input type="checkbox">    <label data-off="&#9724;" data-on="&#9654;"></label></span>
+<img src="dead.jpg" style="width:304px;height:228px;">
 </BODY>
 </HTML>
