--- a/index.html
+++ b/index.html
@@ -10,9 +10,49 @@
 <BODY>
    <H1 style="color:white;">Hi</H1>
    <P style="color:white;">This is very minimal "hello world" HTML document.</P> 
-   
-   <span class="toggle">    <input type="checkbox">    <label data-off="&#10006;" data-on="&#10004;"></label></span>
-<span class="toggle">    <input type="checkbox">    <label data-off="&#9724;" data-on="&#9654;"></label></span>
+   <!-- Trigger/Open The Modal -->
+
+   <button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+
 <img src="dead.jpg" style="width:304px;height:228px;">
 </BODY>
 </HTML>
