--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" type="text/css" href="style.css">
         
       <TITLE style="color:white;">
-         A Small Hello 
+         CamLong2
       </TITLE>
    </HEAD>
 <BODY>
