--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
    </HEAD>
 <BODY>
 </b>
-<img src="goodmorning.jpg" style="width:304px;height:228px;">
+<img src="good-morning-meme-11.jpg" style="width:304px;height:228px;">
 </BODY>
 </HTML>
